# TD5

./: README.md
CCPPCore/: RuntimeLog.h
CCPPCore/GotoExercise/: goto_between_function_error.c
CCPPCore/ReferenceExercise/: ReferenceExercise.cpp
CMakeTraining/: Readme.md
CMakeTraining/cmake-example/student/: CMakeLists.txt
CMakeTraining/cmake-example/usestudentlib/: CMakeLists.txt
CountOfUtf8Characters/: CountOfUtf8Characters.cpp
EncryptionWizard/: ConclusionPage.cpp  ConclusionPage.h  DecryptPage.cpp  DecryptPage.h  EncryptPage.cpp  EncryptPage.h  EncryptionWizard.cpp  EncryptionWizard.h  EncryptionWizard.qrc  EncryptionWizard.rc  EncryptionWizard.sln  EncryptionWizard.vcxproj  EncryptionWizard.vcxproj.filters  TEA.cpp  TEA.h  TEAWorker.cpp  TEAWorker.h  WelcomePage.cpp  WelcomePage.h  main.cpp  resource.h
FepSNMPDriver/: FepSNMPDriver.opensdf
FepSNMPDriver/src/: SNMPDevice.cpp  common_def.h
Notepad/: Quickidx.md  Redmine4.0.0-install-Readme.txt  ToolsChain.md  install_rvm_ruby_rails_script  pdca.md  如何正确获取utf8编码的字符串长度.md
Runvimwithvimcommand/: vimc.bat
Scripts/: profile.bat  vmcontrol.sh
VSCode toolchain/FepSNMPDriver/: CMakeLists.txt  FepSNMPDriver.sln  FepSNMPDriver.vcxproj  FepSNMPDriver.vcxproj.filters
VSCode toolchain/FepSNMPDriver/src/: FactoryRegister.cpp  SNMPDevice.h  SNMPDriver.cpp  SNMPDriver.h  SNMPPrtcl.cpp  SNMPPrtcl.h
VSCode toolchain/calc/: Calculator.cpp  MyCodeBuild.bat
javase/LoopExercise/: ForTrain99.java  GotoExercise.java  gotoexercise.txt
javase/SwapVariable/: SwapVariable.java
javase/TestBasicType/: Basic Type.md  TestBasicType.java  automaticcast.cpp
javase/TestClassMemberAccessAttribute/: .TestClassMemberAccessAttribute.cpp.un~  .TestClassMemberAccessAttribute.java.un~  TestClassMemberAccessAttribute.cpp  TestClassMemberAccessAttribute.java
javase/TestJavaDoc/: TestJavaDoc.java
javase/TestJavaDoc/doc/: TestJavaDoc.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-frame.html  package-summary.html  package-tree.html
